# transcription

./: .gitignore  README.md  pyproject.toml  serverless.yml
transcription/: listener_lambda.py  models.py  processor_lambda.py  settings.py  usecases.py  utils.py
transcription/api/: app.py  transcription.py
