[tool.poetry]
name = "transcription"
version = "0.1.0"
description = ""
authors = ["Anton Yasynetskyi <yanti8786@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
mangum = "^0.17.0"
boto3 = "1.27.1"
botocore = "1.30.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
isort = "^5.12.0"
uvicorn = "^0.23.2"
black = "^23.7.0"
types-requests = "^2.31.0.2"
boto3-stubs = {version = "1.27.1", extras = ["essential"]}
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
skip-string-normalization = true